logs/mobility/build.make.028.log.stderr
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In function ‘void setupPrint()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:15:11: error: ‘argc’ was not declared in this scope
 ros::init(argc, argv, "nothing", ros::init_options::NoSigintHandler);
           ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:15:17: error: ‘argv’ was not declared in this scope
 ros::init(argc, argv, "nothing", ros::init_options::NoSigintHandler);
                 ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: At global scope:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:20:12: error: variable or field ‘print’ declared void
 void print(string str)
            ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:20:12: error: ‘string’ was not declared in this scope
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:20:12: note: suggested alternative:
In file included from /usr/include/c++/4.8/string:39:0,
                 from /opt/ros/indigo/include/geometry_msgs/Pose2D.h:9,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.h:5,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:
/usr/include/c++/4.8/bits/stringfwd.h:62:33: note:   ‘std::string’
   typedef basic_string<char>    string;   
                                 ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In member function ‘void DropOffController::calculateDecision()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:73:21: error: ‘print’ was not declared in this scope
 print("hey it works");
                     ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:73:21: note: suggested alternatives:
In file included from /opt/ros/indigo/include/ros/ros.h:40:0,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:8:
/opt/ros/indigo/include/ros/console.h:156:22: note:   ‘ros::console::print’
 ROSCONSOLE_DECL void print(FilterBase* filter, void* logger, Level level,
                      ^
In file included from /opt/ros/indigo/include/ros/console.h:35:0,
                 from /opt/ros/indigo/include/ros/ros.h:40,
                 from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:8:
/opt/ros/indigo/include/ros/console_backend.h:60:6: note:   ‘ros::console::backend::print’
 void print(void* logger_handle, ::ros::console::Level level, const char* str, const char* file, const char* function, int line);
      ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
